--- a/1.30.md
+++ b/1.30.md
@@ -1,3 +1,4 @@
+//记得标注是新春特别篇
 在短暂的网课结束后，梅沙的师生们等来了期许已久的春节假期。
 
 对于绝大多数人，值此冬去春来、洗旧迎新之际，是和各路亲戚、三五好友小聚一桌，一起感受节日喜庆的快意时刻。
@@ -16,7 +17,7 @@
 
 【图】
 
-包括文宣组的组长都问我，都已经放假了，真的还有必要出周报吗？
+包括文宣组的大家都在问我，都已经放假了，真的还有必要出周报吗？
 
 诚然，在这举国欢庆的节日里，最被人惦记的总是团圆。
 
@@ -26,4 +27,6 @@
 
 感谢在假期中闲里偷忙的工程组的各位，也感谢闲里偷忙阅读周报的你。
 
-沉舟侧畔，未来可期。祝各位春节阖家欢乐。7594，NB！
+沉舟侧畔，未来可期。祝各位春节阖家欢乐，团团圆圆，过个好年。
+
+同时也祝愿7594在新的一年旗开得胜，获得更多成就！
